--- a/site/_sass/layout/_wrapper.scss
+++ b/site/_sass/layout/_wrapper.scss
@@ -373,6 +373,10 @@
     a {
       color: inherit;
     }
+
+    p {
+      margin-bottom: 1rem;
+    }
   }
 
   // Pad.
